--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "cross-zip-cli",
-  "description": "Zip directories cross platform from the CLI.",
-  "version": "1.0.0",
+  "name": "@janpio/cross-zip-cli",
+  "description": "Zip directories cross platform from the CLI (without including the base directory).",
+  "version": "0.0.1",
   "author": "JP Richardson <jprichardson@gmail.com>",
+  "contributors": ["Jan Piotrowski <piotrowski@gmail.com>"],
   "bin": {
     "cross-unzip": "unzip.js",
     "cross-zip": "zip.js"
   },
   "bugs": {
-    "url": "https://github.com/jprichardson/cross-zip-cli/issues"
+    "url": "https://github.com/janpio/cross-zip-cli/issues"
   },
   "dependencies": {
-    "cross-zip": "^2.1.3",
+    "@tybys/cross-zip": "^3.1.0",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
     "zip.js",
     "zip-usage.txt"
   ],
-  "homepage": "https://github.com/jprichardson/cross-zip-cli",
+  "homepage": "https://github.com/janpio/cross-zip-cli",
   "keywords": [
     "cli",
     "linux",
@@ -45,7 +46,7 @@
   "preferGlobal": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/jprichardson/cross-zip-cli.git"
+    "url": "https://github.com/janpio/cross-zip-cli.git"
   },
   "scripts": {
     "lint": "standard",
